--- a/image-video-upload/class-01/.env
+++ b/image-video-upload/class-01/.env
@@ -3,3 +3,7 @@ DATABASE_URL = mongodb://127.0.0.1:27017/file-video-image-upload
 API_KEY = 716863198382148
 CLOUD_NAME = dsxheywlc
 API_SECRET = r4_vuV_UQahMbTGxZ3gIzGE0AUc
+
+MAIL_HOST = smtp.gmail.com
+MAIL_USER = anujbhaladhare@gmail.com
+MAIL_PASS = ggcxlnhrhttcrzar
